The Month_1 assignment with pages linked together, containing tables,and all media elements.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@ Beyond my professional life, I have a strong love for football and is an avid su
 	My goal is to use the skills I gain in cloud engineering to solve real-world problems. From building scalable health tech platforms, to supporting small businesses with secure and reliable infrastructure, I see cloud engineering as a way to bridge gaps and create impact. My background in science gives me a unique perspective, and I plan to bring that into every line of code I write and every solution I build.
 	</p>
 
+	<hr/>
+	<br/>
+
+	<!-- Linking the other pages to the index page -->
+	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/index.html">Home Page &nbsp;</a>
+	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/table.html">&nbsp; Schools and Courses &nbsp;</a>
+	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/media/media.html">&nbsp; Media</a>
+	
+
 	<!-- Fragment identifier link to scroll back to the top -->
 	<p><a href="#top">Back to Top</a></p>
 </body>
