The Month_1 assignment with pages linked together, containing tables,and all media elements.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ Beyond my professional life, I have a strong love for football and is an avid su
 	<br/>
 
 	<!-- Linking the other pages to the index page -->
-	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/index.html">Home Page &nbsp;</a>
-	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/table.html">&nbsp; Schools and Courses &nbsp;</a>
-	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/media/media.html">&nbsp; Media</a>
+	<a href="/">Home Page &nbsp;</a>
+	<a href="/table.html">&nbsp; Schools and Courses &nbsp;</a>
+	<a href="/media/media.html">&nbsp; Media</a>
 	
 
 	<!-- Fragment identifier link to scroll back to the top -->
