--- a/media/media.html
+++ b/media/media.html
@@ -50,8 +50,8 @@
 	<hr/>
 	<br/>
 
-	<a href="./index.html">Home Page &nbsp;</a>
-	<a href="./table.html">&nbsp; Schools and courses &nbsp;</a>
-	<a href="./">&nbsp; Media</a>
+	<a href="/index.html">Home Page &nbsp;</a>
+	<a href="/table.html">&nbsp; Schools and courses &nbsp;</a>
+	<a href="/">&nbsp; Media</a>
 </body>
 </html>
