--- a/table.html
+++ b/table.html
@@ -54,8 +54,8 @@
 	<!-- Links to the other two pages -->
 	<br/>
 	<hr/>
-	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/index.html">Home Page &nbsp;</a>
-	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/table.html">&nbsp; Schools and Courses &nbsp;</a>
-	<a href="file:///home/jaeybee98/Altschool-Africa/Month_1/Assignment_1/media/media.html">&nbsp; Media</a>
+	<a href="/index.html">Home Page &nbsp;</a>
+	<a href="/">&nbsp; Schools and Courses &nbsp;</a>
+	<a href="/media/media.html">&nbsp; Media</a>
 </body>
 </html>
