--- a/media/media.html
+++ b/media/media.html
@@ -15,13 +15,13 @@
 	<!-- Using the <picture> element for responsive images -->
 	<picture>
 		<!-- For mobile devices (max-width: 600px) -->
-		<source media="(max-width: 600px)" srcset="./media/Screenshot%202025-07-09%208.30.47%20PM.png">
+		<source media="(max-width: 600px)" srcset="/media/Screenshot%202025-07-09%208.30.47%20PM.png">
 
 		<!-- For tablet devices (max-width: 1024px)" -->
-		<source media="(max-width: 1024px)" srcset="./media/Screenshot%202025-07-09%208.30.47%20PM.png">
+		<source media="(max-width: 1024px)" srcset="/media/Screenshot%202025-07-09%208.30.47%20PM.png">
 
 		<!-- Default for larger screens (laptops/desktops) -->
-		<img src="./media/Screenshot%202025-07-09%208.30.47%20PM.png" alt="An imageshowing cloud engineering skills." width="100%">
+		<img src="/media/Screenshot%202025-07-09%208.30.47%20PM.png" alt="An imageshowing cloud engineering skills." width="100%">
 	</picture>
 
 	<p>This Image is reponsive to mobile, tablet, and laptop screens</p>
@@ -31,13 +31,13 @@
 	<!-- Using the <audio> element -->
 	<h2>The Sound of Consistency and Dedication</h2>
 	<audio controls>
-		<source src="./media/keyboard-typing-sound-247417.mp3" type="audio/mpeg">
+		<source src="/media/keyboard-typing-sound-247417.mp3" type="audio/mpeg">
 		Your browser does not support audio element.
 	</audio>
 
 	<!-- Using the <video> element -->
 	<video controls width="100%">
-		<source src="./media/128210-747086064_tiny.mp4" type="video/mp4">
+		<source src="/media/128210-747086064_tiny.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
 	<hr/>
