The Month_1 assignment with pages linked together, containing tables,and all media elements.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Beyond my professional life, I have a strong love for football and is an avid su
 	<br/>
 
 	<!-- Linking the other pages to the index page -->
-	<a href="/">Home Page &nbsp;</a>
+	<a href="/index.html">Home Page &nbsp;</a>
 	<a href="/table.html">&nbsp; Schools and Courses &nbsp;</a>
 	<a href="/media/media.html">&nbsp; Media</a>
 	
