--- a/table.html
+++ b/table.html
@@ -55,7 +55,7 @@
 	<br/>
 	<hr/>
 	<a href="/index.html">Home Page &nbsp;</a>
-	<a href="/">&nbsp; Schools and Courses &nbsp;</a>
+	<a href="/table.html">&nbsp; Schools and Courses &nbsp;</a>
 	<a href="/media/media.html">&nbsp; Media</a>
 </body>
 </html>
