The Month_1 assignment with pages linked together, containing tables,and all media elements.

--- a/table.html
+++ b/table.html
@@ -54,8 +54,8 @@
 	<!-- Links to the other two pages -->
 	<br/>
 	<hr/>
-	<a href="/index.html">Home Page &nbsp;</a>
-	<a href="/table.html">&nbsp; Schools and Courses &nbsp;</a>
-	<a href="/media/media.html">&nbsp; Media</a>
+	<a href="./index.html">Home Page &nbsp;</a>
+	<a href="./table.html">&nbsp; Schools and Courses &nbsp;</a>
+	<a href="./media/media.html">&nbsp; Media</a>
 </body>
 </html>
