The Month_1 assignment with pages linked together, containing tables,and all media elements.

--- a/media/media.html
+++ b/media/media.html
@@ -9,7 +9,7 @@
 	<h1>Junaid Ajibola: A Cloud Egineering Enthusiast</h1>
 
 	<p>
-	Welcome to a glimpse into the journey and aspirations of Junaid Aji	   bola. A proud alumnus of the Federal University of Technology, Akur        e (FUTA), Junaid is currently enhancing his skills in Cloud Enginee        ring as part of AltSchool Africa's Karatu'25 cohort. This page uses        various media elements to convey his powerful message and dedicatio        n to technology.
+	Welcome to a glimpse into the journey and aspirations of Junaid Ajibola. A proud alumnus of the Federal University of Technology, Akure (FUTA), Junaid is currently enhancing his skills in Cloud Engineering as part of AltSchool Africa's Karatu'25 cohort. This page uses various media elements to convey his powerful message and dedication to technology.
 	</p>
 
 	<!-- Using the <picture> element for responsive images -->
@@ -47,7 +47,7 @@
 
 	<h2>Building The Future With Cloud</h2>
 	<p>
-	Junaid Ajibola is driven by a passion for leveraging cloud technologies to build robust, scalable, abd efficient solutions. His journey from FUTA to Altschool Africa's Cloud Engineering program is a testament to his dedication to continuous learning and his ambition to contribute significantly to the tech landscape. He aims to be at the forefront of cloud innovation, designing and implementing the next generation of digital infrastructure.
+	Junaid Ajibola is driven by a passion for leveraging cloud technologies to build robust, scalable, and efficient solutions. His journey from FUTA to Altschool Africa's Cloud Engineering program is a testament to his dedication to continuous learning and his ambition to contribute significantly to the tech landscape. He aims to be at the forefront of cloud innovation, designing and implementing the next generation of digital infrastructure.
 	</p>
 	<hr/>
 	<br/>
