--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Altschool Student Profile</title>
+	<link href="/Altschool-Africa/Month_1/Assignment_1/media/Style/index.css" rel="stylesheet">
 </head>
 <body id="top">
 	<!-- Main Heading -->
